force-app/main/default/objects/Sample_Analysis__c/Sample_Analysis__c.object-meta.xml
<CustomObject>
    <label>Sample Analysis</label>
    <nameField>
        <label>UA Analysis Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Analysis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>