force-app/main/default/objects/Sample_Analysis__c/fields/Appearance__c.field-meta.xml
<CustomField>
    <fullName>Appearance__c</fullName>
    <label>Appearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Hazy</fullName>
            </value>
            <value>
                <fullName>Cloudy</fullName>
            </value>
            <value>
                <fullName>Turbid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>