force-app/main/default/objects/Sample_Analysis__c/fields/Bacteria__c.field-meta.xml
<CustomField>
    <fullName>Bacteria__c</fullName>
    <label>Bacteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>