force-app/main/default/objects/Sample_Analysis__c/fields/Bilesalt__c.field-meta.xml
<CustomField>
    <fullName>Bilesalt__c</fullName>
    <label>Bilesalt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>