force-app/main/default/objects/Sample_Analysis__c/fields/Bilrubin__c.field-meta.xml
<CustomField>
    <fullName>Bilrubin__c</fullName>
    <label>Bilrubin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>