force-app/main/default/objects/Sample_Analysis__c/fields/Casts__c.field-meta.xml
<CustomField>
    <fullName>Casts__c</fullName>
    <label>Casts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>