force-app/main/default/objects/Sample_Analysis__c/fields/Crystal__c.field-meta.xml
<CustomField>
    <fullName>Crystal__c</fullName>
    <label>Crystal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>