force-app/main/default/objects/Sample_Analysis__c/fields/Epithelial_Cells__c.field-meta.xml
<CustomField>
    <fullName>Epithelial_Cells__c</fullName>
    <label>Epithelial Cells</label>
    <length>255</length>
    <type>Text</type>
</CustomField>