force-app/main/default/objects/Sample_Analysis__c/fields/Examined_By__c.field-meta.xml
<CustomField>
    <fullName>Examined_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examined By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>