force-app/main/default/objects/Sample_Analysis__c/fields/Examined_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Examined_Datetime__c</fullName>
    <label>Examined Datetime</label>
    <type>DateTime</type>
</CustomField>