force-app/main/default/objects/Sample_Analysis__c/fields/Glucose__c.field-meta.xml
<CustomField>
    <fullName>Glucose__c</fullName>
    <label>Glucose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>