force-app/main/default/objects/Sample_Analysis__c/fields/Ketone__c.field-meta.xml
<CustomField>
    <fullName>Ketone__c</fullName>
    <label>Ketone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>