force-app/main/default/objects/Sample_Analysis__c/fields/Lab_Sample_Examined_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Lab_Sample_Examined_Datetime__c</fullName>
    <label>Lab Sample Examined Datetime</label>
    <type>DateTime</type>
</CustomField>