force-app/main/default/objects/Sample_Analysis__c/fields/Leukocyte__c.field-meta.xml
<CustomField>
    <fullName>Leukocyte__c</fullName>
    <label>Leukocyte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>