force-app/main/default/objects/Sample_Analysis__c/fields/Mucus__c.field-meta.xml
<CustomField>
    <fullName>Mucus__c</fullName>
    <label>Mucus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>