force-app/main/default/objects/Sample_Analysis__c/fields/PH__c.field-meta.xml
<CustomField>
    <fullName>PH__c</fullName>
    <label>PH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>