force-app/main/default/objects/Sample_Analysis__c/fields/Puss_Cells_W_B_C__c.field-meta.xml
<CustomField>
    <fullName>Puss_Cells_W_B_C__c</fullName>
    <label>Puss Cells (W.B.C)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>