force-app/main/default/objects/Sample_Analysis__c/fields/Red_Cells_R_B_C__c.field-meta.xml
<CustomField>
    <fullName>Red_Cells_R_B_C__c</fullName>
    <label>Red Cells (R.B.C)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>