force-app/main/default/objects/Sample_Analysis__c/fields/Schistosoma_Eggs__c.field-meta.xml
<CustomField>
    <fullName>Schistosoma_Eggs__c</fullName>
    <label>Schistosoma Eggs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>