force-app/main/default/objects/Sample_Analysis__c/fields/Specific_Gravity__c.field-meta.xml
<CustomField>
    <fullName>Specific_Gravity__c</fullName>
    <label>Specific Gravity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>