force-app/main/default/objects/Sample_Analysis__c/fields/Specimen_Status__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Status__c</fullName>
    <label>Specimen Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>