force-app/main/default/objects/Sample_Analysis__c/fields/Spermatozoa__c.field-meta.xml
<CustomField>
    <fullName>Spermatozoa__c</fullName>
    <label>Spermatozoa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>