force-app/main/default/objects/Sample_Analysis__c/fields/Trichomonas__c.field-meta.xml
<CustomField>
    <fullName>Trichomonas__c</fullName>
    <label>Trichomonas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>