force-app/main/default/objects/Sample_Analysis__c/fields/UA_Sample_Details__c.field-meta.xml
<CustomField>
    <fullName>UA_Sample_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UA Sample Details</label>
    <referenceTo>UA_Sample_Details__c</referenceTo>
    <relationshipLabel>Sample Analysis</relationshipLabel>
    <relationshipName>Sample_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>