force-app/main/default/objects/Sample_Analysis__c/fields/Urobilinogen__c.field-meta.xml
<CustomField>
    <fullName>Urobilinogen__c</fullName>
    <label>Urobilinogen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>