force-app/main/default/objects/Sample_Analysis__c/fields/Yeast_Cells__c.field-meta.xml
<CustomField>
    <fullName>Yeast_Cells__c</fullName>
    <label>Yeast Cells</label>
    <length>255</length>
    <type>Text</type>
</CustomField>